--- a/index.html
+++ b/index.html
@@ -7,16 +7,63 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <title>Template</title>
+    <title>Carousel</title>
 </head>
 <body>
 
-<div class="carousel-item">
-    <img src="..." alt="...">
-    <div class="carousel-caption d-none d-md-block">
-        <h5>...</h5>
-        <p>...</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1" class></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2" class></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3" class></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4" class></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://cdn.pocket-lint.com/r/s/1200x/assets/images/149386-gadgets-news-iss-image1-nb09sv7tad.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block black bold">
+                <h5>Space Station</h5>
+                <p>This is the Space Station</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://www.toureiffel.paris/themes/custom/tour_eiffel/video/tour-eiffel-timelapse-jour-nuit-recadre.jpg" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Eiffel Tower</h5>
+                <p>This is the Eiffel tower</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://aws-tiqets-cdn.imgix.net/images/content/1e74453a4d2c45f9becb39add27f2dff.jpg?auto=format&fit=crop&ixlib=python-1.1.2&q=25&s=b720cbf5ab86e1786ee7bd2a6b4f26be&w=400&h=320&dpr=2.625" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Empire State Building</h5>
+                <p>This is the Empire State Building</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://www.dw.com/image/45348566_303.jpg" class="d-block w-100">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Milky Way</h5>
+                <p>This the Milky Way (the galaxy, not the candy bar)</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://cdn.influenster.com/media/product/image/4678fbbf-1afd-4597-9b50-be2699918aed.png.750x750_q85ss0_progressive.png">
+            <div class="carousel-caption d-none d-md-block black bold">
+                <h5>Milky Way</h5>
+                <p>This the Milky Way (the candy bar, not the galaxy)</p>
+            </div>
+        </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 
